2023-12-25T08:09:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7320288977 # 2163
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-25
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 299 469 / 300 470
* notice: next accum: outdated-unq outdated-all / unq all: 299 469 / 301 471
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-12-25]

2023-12-18T08:09:44Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7245279128 # 2142
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-18
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 298 468 / 300 470
* notice: next accum: outdated-unq outdated-all / unq all: 299 469 / 300 470
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-12-04] / []

2023-12-16T16:07:37Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7232939948 # 2137
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-16
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 298 468 / 299 469
* notice: next accum: outdated-unq outdated-all / unq all: 298 468 / 300 470
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-12-16]

2023-12-04T08:09:43Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7083719124 # 2100