@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-12-25T08:09:04Z",
-  "count_outdated" : 469,
-  "uniques_outdated" : 299,
+  "timestamp" : "2023-12-30T16:07:26Z",
+  "count_outdated" : 470,
+  "uniques_outdated" : 300,
   "count" : 471,
   "uniques" : 301,
   "clones" : [
-    {
-      "timestamp": "2023-12-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-12-25T00:00:00Z",
       "count": 1,
